# Falafle

./: Layout.txt  PathForward.txt
assets/data/: items.json  map.json  tilesets.json
cataclysm-rpg/: CMakeLists.txt  README.md
docs/: design.md
src/: main.cpp
src/engine/: audio.cpp  audio.h  input.cpp  input.h  lighting.cpp  lighting.h  particles.cpp  particles.h  renderer.cpp  renderer.h
src/game/: actor.cpp  actor.h  items.cpp  items.h  spell.h  tiles.cpp  tiles.h  ui.cpp  ui.h  world.cpp  world.h
tools/: Pipfile  build_datasets.sh  generate_data.py
tools/data_sources/: recipes.tsv  tiles.csv
tools/data_sources/items/: ammo.csv  armor.csv  books.csv  chems.csv  clothing.csv  consumables.csv  container.csv  melee.csv  misc.csv  scrolls.csv  spells.csv  tool.csv
